<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#8F2424"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/app_bar_main">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-204dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-40dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_desc_tropang_maramihan"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/boodle_fight_2__1_" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@string/content_desc_olaalaah"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/boodle_blackbeard" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_desc_tropang_bisdak"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/asd" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_desc_barkadahan_1"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dgs" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/content_desc_barkadahan_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/saq" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/content_desc_bisdak_meat_up"
        app:layout_constraintBottom_toTopOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/kkk" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/content_desc_olaaah_paella"
        app:layout_constraintEnd_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/op" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="142dp"
        android:contentDescription="@string/content_desc_bisdak_special"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/p" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/content_desc_olaaah_bisdak"
        app:layout_constraintEnd_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/i" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="18dp"
        android:contentDescription="@string/content_desc_pamilyang_bisdak"
        app:layout_constraintEnd_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/_4" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/content_desc_olaalaah_b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_5" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/content_desc_tropang_bisdak_b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:srcCompat="@drawable/_6" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/content_desc_barkadahan_1_b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:srcCompat="@drawable/_7" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="124dp"
        android:layout_height="93dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/content_desc_barkadahan_2_b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:srcCompat="@drawable/_9" />

</androidx.constraintlayout.widget.ConstraintLayout>